--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,6 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
-
 :root {
     --bs-blue: #0d6efd;
     --bs-indigo: #6610f2;
@@ -37,7 +36,7 @@
     --bs-gray-600: #6c757d;
     --bs-gray-700: #495057;
     --bs-gray-800: #343a40;
-    --bs-gray-900: #212529;
+    --bs-gray-900: #ffffff;
     --bs-primary: #ffc800;
     --bs-secondary: #6c757d;
     --bs-success: #198754;
