--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@
     --bs-gray-600: #6c757d;
     --bs-gray-700: #495057;
     --bs-gray-800: #343a40;
-    --bs-gray-900: #ffffff;
+    --bs-gray-900: #212529;
     --bs-primary: #ffc800;
     --bs-secondary: #6c757d;
     --bs-success: #198754;
